--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
-    "name": "drodenbaugh/another-wordpress-classifieds-plugin",
+    "name": "strategy11/another-wordpress-classifieds-plugin",
     "description": "A plugin that provides the ability to run a free or paid classified ads servie on your WP site.",
-    "type": "project",
+    "type": "wordpress-plugin",
     "autoload": {
         "classmap": [
             "admin",
