--- a/.github/workflows/phpcs.yml
+++ b/.github/workflows/phpcs.yml
@@ -15,8 +15,8 @@ jobs:
       - name: Check PHP syntax
         run: find -L .  -path ./vendor -prune -o -name '*.php' -print0 | xargs -0 -n 1 -P 4 php -l
   runUnitTests:
+    name: Run unit tests
+    runs-on: ubunu-latest
+    steps:
       - name: Run unit tests
-        runs-on: ubunu-latest
-        steps:
-          - name: Run unit tests
-            run: phpunit
+        run: phpunit
