--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -10,4 +10,4 @@ jobs:
       - uses: actions/checkout@v2
       - uses: php-actions/composer@v1
       - name: PHPUnit Tests
-        run: ./vendor/bin/phpunit test
+        run: ./vendor/bin/phpunit
