--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -9,5 +9,22 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: php-actions/composer@v1
+      - name: Installing WordPress
+        run: |
+          ./vendor/bin/phpunit --version
+          mysql --version
+          PLUGIN_SLUG=$(basename $(pwd))
+          export WP_DEVELOP_DIR=/tmp/wordpress/
+          git clone --depth=50 --branch="master" git://develop.git.wordpress.org/ /tmp/wordpress
+          cd ..
+          cp -r "$PLUGIN_SLUG" "/tmp/wordpress/src/wp-content/plugins/another-wordpress-classifieds-plugin"
+          cd /tmp/wordpress/
+          cp wp-tests-config-sample.php wp-tests-config.php
+          sed -i "s/youremptytestdbnamehere/wordpress_tests/" wp-tests-config.php
+          sed -i "s/yourusernamehere/travis/" wp-tests-config.php
+          sed -i "s/yourpasswordhere//" wp-tests-config.php
+          mysql -u root -e "CREATE DATABASE wordpress_tests;"
+          cd "/tmp/wordpress/src/wp-content/plugins/another-wordpress-classifieds-plugin"
+          phpenv rehash
       - name: PHPUnit Tests
-        run: ./vendor/bin/phpunit
+        run: ./vendor/bin/phpunit -c phpunit.xml
