--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -21,12 +21,12 @@ jobs:
           cd /tmp/wordpress/
           cp wp-tests-config-sample.php wp-tests-config.php
           sed -i "s/youremptytestdbnamehere/wordpress_tests/" wp-tests-config.php
-          sed -i "s/yourusernamehere/travis/" wp-tests-config.php
-          sed -i "s/yourpasswordhere//" wp-tests-config.php
+          sed -i "s/yourusernamehere/root/" wp-tests-config.php
+          sed -i "s/yourpasswordhere/root/" wp-tests-config.php
       - name: Creating database
         run: |
           sudo /etc/init.d/mysql start
-          mysql -u root -e "CREATE DATABASE wordpress_tests;"
+          mysql -u root -proot -e "CREATE DATABASE wordpress_tests;"
           cd "/tmp/wordpress/src/wp-content/plugins/another-wordpress-classifieds-plugin"
           phpenv rehash
       - name: PHPUnit Tests
