--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -28,6 +28,7 @@ jobs:
           sudo /etc/init.d/mysql start
           mysql -u root -proot -e "CREATE DATABASE wordpress_tests;"
       - name: Switch to moved folder
+        run: |
           cd "/tmp/wordpress/src/wp-content/plugins/another-wordpress-classifieds-plugin"
           #phpenv rehash
       - name: PHPUnit Tests
