--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -14,11 +14,13 @@ jobs:
           ./vendor/bin/phpunit --version
           mysql --version
           PLUGIN_SLUG=$(basename $(pwd))
+          echo PLUGIN_SLUG
           export WP_DEVELOP_DIR=/tmp/wordpress/
           git clone --depth=50 --branch="master" git://develop.git.wordpress.org/ /tmp/wordpress
           cd ..
           cp -r "$PLUGIN_SLUG" "/tmp/wordpress/src/wp-content/plugins/another-wordpress-classifieds-plugin"
           cd /tmp/wordpress/
+          pwd
           cp wp-tests-config-sample.php wp-tests-config.php
           sed -i "s/youremptytestdbnamehere/wordpress_tests/" wp-tests-config.php
           sed -i "s/yourusernamehere/root/" wp-tests-config.php
@@ -30,6 +32,7 @@ jobs:
       - name: Switch to moved folder
         run: |
           cd "/tmp/wordpress/src/wp-content/plugins/another-wordpress-classifieds-plugin"
+          pwd
           #phpenv rehash
       - name: PHPUnit Tests
         run: ./vendor/bin/phpunit -c phpunit.xml
