--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -14,7 +14,7 @@ jobs:
           ./vendor/bin/phpunit --version
           mysql --version
           PLUGIN_SLUG=$(basename $(pwd))
-          echo PLUGIN_SLUG
+          echo $PLUGIN_SLUG
           export WP_DEVELOP_DIR=/tmp/wordpress/
           git clone --depth=50 --branch="master" git://develop.git.wordpress.org/ /tmp/wordpress
           cd ..
@@ -35,4 +35,4 @@ jobs:
           pwd
           #phpenv rehash
       - name: PHPUnit Tests
-        run: ./vendor/bin/phpunit -c phpunit.xml
+        run: vendor/bin/phpunit -c phpunit.xml
