--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -13,7 +13,7 @@ jobs:
         run: |
           ./vendor/bin/phpunit --version
           mysql --version
-          PLUGIN_SLUG=$(basename $(pwd))
+          echo '::set-env name=PLUGIN_SLUG::$(basename $(pwd))'
           export WP_DEVELOP_DIR=/tmp/wordpress/
           git clone --depth=50 --branch="master" git://develop.git.wordpress.org/ /tmp/wordpress
           cd ..
