--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -13,11 +13,11 @@ jobs:
         run: |
           ./vendor/bin/phpunit --version
           mysql --version
-          echo '::set-env name=PLUGIN_SLUG::{{ $(basename $(pwd)) }}'
+          echo ${GITHUB_REPOSITORY#*/}
           export WP_DEVELOP_DIR=/tmp/wordpress/
           git clone --depth=50 --branch="master" git://develop.git.wordpress.org/ /tmp/wordpress
           cd ..
-          cp -r "$PLUGIN_SLUG" "/tmp/wordpress/src/wp-content/plugins/$PLUGIN_SLUG"
+          cp -r "$PLUGIN_SLUG" "/tmp/wordpress/src/wp-content/plugins/${GITHUB_REPOSITORY#*/}"
           cd /tmp/wordpress/
           pwd
           cp wp-tests-config-sample.php wp-tests-config.php
@@ -30,7 +30,7 @@ jobs:
           mysql -u root -proot -e "CREATE DATABASE wordpress_tests;"
       - name: PhpUnit tests
         run: |
-          cd "/tmp/wordpress/src/wp-content/plugins/$PLUGIN_SLUG"
+          cd "/tmp/wordpress/src/wp-content/plugins/${GITHUB_REPOSITORY#*/}"
           pwd
           #phpenv rehash
           vendor/bin/phpunit -c phpunit.xml
