--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -17,7 +17,7 @@ jobs:
           export WP_DEVELOP_DIR=/tmp/wordpress/
           git clone --depth=50 --branch="master" git://develop.git.wordpress.org/ /tmp/wordpress
           cd ..
-          cp -r "$PLUGIN_SLUG" "/tmp/wordpress/src/wp-content/plugins/${GITHUB_REPOSITORY#*/}"
+          cp -r "${GITHUB_REPOSITORY#*/}" "/tmp/wordpress/src/wp-content/plugins/${GITHUB_REPOSITORY#*/}"
           cd /tmp/wordpress/
           pwd
           cp wp-tests-config-sample.php wp-tests-config.php
