--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -11,9 +11,6 @@ jobs:
       - uses: php-actions/composer@v1
       - name: Installing WordPress
         run: |
-          ./vendor/bin/phpunit --version
-          mysql --version
-          echo ${GITHUB_REPOSITORY#*/}
           export WP_DEVELOP_DIR=/tmp/wordpress/
           git clone --depth=50 --branch="master" git://develop.git.wordpress.org/ /tmp/wordpress
           cd ..
@@ -32,5 +29,5 @@ jobs:
         run: |
           cd "/tmp/wordpress/src/wp-content/plugins/${GITHUB_REPOSITORY#*/}"
           pwd
-          #phpenv rehash
+          vendor/bin/phpunit --version
           vendor/bin/phpunit -c phpunit.xml
