--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -7,8 +7,9 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        php: [5.6, 7.0, 7.1, 7.2, 7.3, 7.4]
-    name: PHP ${{ matrix.php }} tests
+        php: [5.6, 7.3, 7.4]
+        wordpress: [4.9, master]
+    name: PHP ${{ matrix.php }} tests in WP ${{ matrix.wordpress }}
     steps:
       - uses: actions/checkout@v2
 
@@ -21,7 +22,7 @@ jobs:
       - name: Installing WordPress
         run: |
           export WP_DEVELOP_DIR=/tmp/wordpress/
-          git clone --depth=50 --branch="master" git://develop.git.wordpress.org/ /tmp/wordpress
+          git clone --depth=50 --branch="${{ matrix.wordpress }}" git://develop.git.wordpress.org/ /tmp/wordpress
           cd ..
           cp -r "${GITHUB_REPOSITORY#*/}" "/tmp/wordpress/src/wp-content/plugins/${GITHUB_REPOSITORY#*/}"
           cd /tmp/wordpress/
