--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -9,6 +9,11 @@ jobs:
       matrix:
         php: [5.6, 7.3, 7.4]
         wordpress: [4.9, master]
+        exclude:
+          - php: 7.3
+            wordpress: 4.9
+          - php: 7.4
+            wordpress: 4.9
     name: PHP ${{ matrix.php }} tests in WP ${{ matrix.wordpress }}
     steps:
       - uses: actions/checkout@v2
