--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -7,8 +7,8 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        php: [5.6, 7.3, 7.4]
-        wordpress: [4.9, master]
+        php: [7.3, 7.4] # TODO: Add 5.6 with phpunit 4.x
+        wordpress: [master] # TODO: Add WP 4.9
         exclude:
           - php: 7.3
             wordpress: 4.9
