--- a/package.json
+++ b/package.json
@@ -21,11 +21,15 @@
   "devDependencies": {
     "grunt": "^1.3.0",
     "grunt-contrib-clean": "~1",
+    "grunt-contrib-compress": "^1.6.0",
     "grunt-contrib-concat": "~1",
     "grunt-contrib-jshint": "^1",
     "grunt-contrib-less": "~1",
     "grunt-contrib-uglify": "^1",
     "grunt-contrib-watch": "~1",
+    "grunt-potomo": "~3.5",
+    "grunt-text-replace": "^0.4.0",
+    "grunt-wp-i18n": "^1.0.3",
     "underscore": "^1.12.0"
   }
 }
